# solot_data_simulated

./: README.md  pyproject.toml
solot_data_simulated/: get_solot_data.py
test/: show_image.test.py
