[tool.poetry]
name = "solot-data-simulated"
version = "0.1.0"
description = "to test solot lottery data\u001b[D\u001b[D\u001b[D\u001b"
authors = ["aboutmydreams <aboutmydreams@163.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
